--- a/index.html
+++ b/index.html
@@ -18,11 +18,17 @@
     <link rel="stylesheet" type="text/css" href="./assets/reset.css">
     <link rel="stylesheet" type="text/css" href="./assets/styles.css">
 
-    <title>Day Planner</title>
+    <title>Work Day Scheduler</title>
 
 </head>
 <body>
-
+    <header class="jumbotron jumbotron-fluid custom-jumbotron">
+        <div class="container text-center">
+          <h1>Work Day Scheduler</h1>
+            <h4>A simple calendar app to help you schedule your day</h4>
+          <h4><span id="time-display">00:00:00</span></h4>
+        </div>
+      </header>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
