--- a/index.html
+++ b/index.html
@@ -21,14 +21,12 @@
     <title>Work Day Scheduler</title>
 
 </head>
-<body>
-    <header class="jumbotron jumbotron-fluid custom-jumbotron">
-        <div class="container text-center">
-          <h1>Work Day Scheduler</h1>
-            <h4>A simple calendar app to help you schedule your day</h4>
-          <h4><span id="time-display">00:00:00</span></h4>
-        </div>
-      </header>
+    <body>
+        <header class="jumbotron jumbotron-fluid text-center">
+            <h1 class="display-3" >Work Day Scheduler</h1>
+            <h4 class="display-4" >Current Time & Date</h4>
+            <h4 id="time" class="display-4" style="text-align:center;"></h4>
+        </header>
 
 
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
